--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ display: flex; align-items: center;
       <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
-      <img src=https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26381062_s (1).jpg">
+      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
