--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ display: flex; align-items: center;
         <ul id="page-link">
          <ul class="gnavi">
       <li><a href="#area-2"><div class="left">
-    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス100.jpg">
+    <img src="images/1220963.jpg">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
     <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
