--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ display: flex; align-items: center;
       <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+      <img src="images/26666438_s.jpg">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
