--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ display: flex; align-items: center;
     <img src="images/1220963.jpg">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
-    <img src="C:\Users\ootsu\OneDrive\デスクトップ\images\26666438_s.jpg">
+    <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008">
    </div><span>活動時間</span></a></li>
       <li><a href="#area-4"> <div class="left">
       <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
