--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@ display: flex; align-items: center;
         <ul id="page-link">
          <ul class="gnavi">
       <li><a href="#area-2"><div class="left">
-    <img src="images/1220963.jpg">
+    <img src="">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
-    <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008">
+    <img src="images/26666438_s.jpg">
    </div><span>活動時間</span></a></li>
       <li><a href="#area-4"> <div class="left">
       <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
-      <img src="https://github.com/Ikumi19372/demo/commit/4ed8f495b5c60e6c9a86b9afca1fbebc106be008#diff-7c64bd08777cdd23abfa2438bea123976a89482d80fd1d41ecb2a0d306506cae">
+      <img src="images/1220963.jpg">
       </div><span>部長挨拶</span></a></li>
        <li><a href="#area-6"><div class="left">
-      <img src="images/26666438_s.jpg">
+      <img src="">
     </div><span>大会記録</span></a></li>
     </ul></ul> 
  
