--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ display: flex; align-items: center;
     <img src="https://github.com/Ikumi19372/demo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9100.jpg">
    </div><span>活動時間</span></a></li>
       <li><a href="#area-4"> <div class="left">
-      <img src="\C:\Users\ootsu\OneDrive\デスクトップ\images\22841312_s.jpg"> 
+      <img src="images/22841312_s.jpg"> 
     </div><span>活動場所</span></a></li>
       <li><a href="#area-5"><div class="left">
       <img src="images/1220963.jpg">
