--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ display: flex; align-items: center;
        <p> <span class="marker">※練習試合等があるときは、１日練習になります。</span></p>
 		</section>
 		<p></p><p></p>
-		<div style="text-align: center"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\テニス１１.jpg"></div>　　　　<div style="text-align: center"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\S__17063956.jpg"></div>
+		<div style="text-align: center"><img src="images/テニス１１.jpg"></div>　　　　<div style="text-align: center"><img src="C:\Users\ootsu\OneDrive\デスクトップ\images\S__17063956.jpg"></div>
 		<p></p><p></p>
       <section class="area" id="area-4">
 
