--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ display: flex; align-items: center;
     <img src="images/テニス100.jpg">
    </div><span>部員数</span></a></li>
       <li><a href="#area-3"><div class="left">
-    <img src="https://github.com/Ikumi19372/demo/blob/main/images/%E3%83%86%E3%83%8B%E3%82%B9100.jpg">
+    <img src="images/26666438_s.jpg">
    </div><span>活動時間</span></a></li>
       <li><a href="#area-4"> <div class="left">
       <img src="images/22841312_s.jpg"> 
