--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ display: flex; align-items: center;
 		<p><span class="blurTrigger">３年生となってむかえる最後の大会では、<span class="marker">個人戦、団体戦ともに優勝</span>を目指し、</span></p>
 		<p><span class="blurTrigger">今までご指導していただいた顧問の先生やコーチ、そして今まで一緒に練習してきた仲間たちみんなで喜び合えるように、ソフトテニス部全員で頑張っていきたいと思います。</span></p>
 		</section><font size="6">
-		<a href="D:\slide2.html">・ソフトテニス部スライドショーはこちら</a></font>
+		<a href="slide2.html">・ソフトテニス部スライドショーはこちら</a></font>
 		<section class="area" id="area-6">
 		<h1 span class="marker" style="text-align:left">大会記録</h1>
 		<div class="center"><img src="images/テニス101.png"></div>
